RESOLVED FIXED128862
Control tints don't update inside WebViews
https://bugs.webkit.org/show_bug.cgi?id=128862
Summary Control tints don't update inside WebViews
Anders Carlsson
Reported 2014-02-14 19:34:11 PST
Control tints don't update inside WebViews
Attachments
Patch (1.61 KB, patch)
2014-02-14 19:35 PST, Anders Carlsson
rniwa: review+
Anders Carlsson
Comment 1 2014-02-14 19:35:10 PST
Anders Carlsson
Comment 2 2014-02-14 19:40:51 PST
Note You need to log in before you can comment on or make changes to this bug.