Control tints don't update inside WebViews https://bugs.webkit.org/show_bug.cgi?id=128862

Reviewed by Ryosuke Niwa.

* WebView/WebView.mm:
(-[WebView _windowChangedKeyState]):
Call [super _windowChangedKeyState].

Canonical link: https://commits.webkit.org/146884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164152 268f45cc-cd09-0410-ab3c-d52691b4dbfc